deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-microproject-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-microproject
  template:
    metadata:
      labels:
        app: k8s-microproject
    spec:
      containers:
      - name: k8s-microproject
        image: axeldouze/k8s-microproject
        ports:
        - containerPort: 3000
