ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-microproject-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - 2-de-coeur-compose
    secretName: k8s-tls
  rules:
  - host: 2-de-coeur-compose
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-microproject-service
            port:
              number: 80
